capitulo-4/net-policy/network-policy/network-policy-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: network-policy
spec: {}
status: {}
